--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,9 +2,8 @@
   "compilerOptions": {
     "declaration": true,
     "experimentalDecorators": true,
-    "esModuleInterop": true,
     "module": "commonjs",
-    "target": "es5",
+    "target": "ES2018",
     "sourceMap": true,
     "noEmitOnError": true,
     "emitDecoratorMetadata": true,
