--- a/functions/add-dealership/package.json
+++ b/functions/add-dealership/package.json
@@ -12,9 +12,10 @@
     "@dealership/utils": "*"
   },
   "devDependencies": {
+    "ts-loader": "~8.0.0",
+    "tsconfig-paths-webpack-plugin": "~3.2.0",
     "webpack": "~4.43.0",
     "webpack-cli": "~3.3.12",
-    "ts-loader": "~8.0.0",
-    "tsconfig-paths-webpack-plugin": "~3.2.0"
+    "webpack-filter-warnings-plugin": "^1.2.1"
   }
 }
