--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -9,7 +9,8 @@
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["node"]
   },
 
   "exclude": ["node_modules", "dist"]
