--- a/packages/entities/package.json
+++ b/packages/entities/package.json
@@ -7,6 +7,7 @@
   "files": [
     "dist"
   ],
+  "typings": "dist/index.d.ts",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/node": "^14.14.10",
@@ -14,11 +15,11 @@
     "typescript": "3.3.3333"
   },
   "dependencies": {
+    "@dealership/utils": "*",
     "class-validator": "^0.12.2",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.10",
-    "typeorm": "0.2.29",
-    "typeorm-aurora-data-api-driver": "^1.4.0"
+    "typeorm": "0.2.29"
   },
   "scripts": {
     "build": "yarn run clean && yarn run compile",
